fixed spacing outside html tags!

--- a/css/general.css
+++ b/css/general.css
@@ -1,13 +1,10 @@
-body {
+body, html {
   background-color: #23272A;
   font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
   width: 100%;
   overflow-x: hidden;
-}
-
-html {
   scroll-behavior: smooth;
 }
 
